# bevy_template

./: README.md
0.8/minimal/: Cargo.toml  cargo-generate.toml
0.9/minimal/: Cargo.toml  ask-license.rhai  cargo-generate.toml
0.9/minimal/src/: main.rs
minimal/: Cargo.toml  cargo-generate.toml
minimal/.cargo/: config.toml
minimal/src/: main.rs
