[package]
name = "{{project-name}}"
description = "{{project-description}}"
authors = ["{{authors}}"]
version = "0.1.0"
edition = "2021"

[dependencies]
{% if dynamic-linking %}bevy = { version = "0.10", features = ["dynamic_linking"] }
{% else %}bevy = "0.10"{% endif %}

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
